add examples of multithreading